<resources>

    <string name="app_name">Fakarny</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="register"> <a href=""> or Create a new account </a> </string>
    <string name="confirm_password">Confirm Password...</string>
    <string name="register_now">Register</string>

    <string name="trip_title">YaRab</string>
    <string name="loc_from">From</string>
    <string name="Loc_to">To</string>
    <string name="date_time">Data : Time </string>
    <string name="repetition">Repetition</string>
    <string name="rounded">Rounded</string>
    <string name="importance">Importance</string>
    <string name="note">Note</string>
    <string name="add_trip"> Add Trip </string>
    <string name="api_key">changeme</string>
    <string name="no_history_trips">No trips in history.</string>
    <string name="start_point">Start Point:</string>
    <string name="end_point">End Point:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="rounded_history">Rounded:</string>
    <string name="test_api_key">AIzaSyB90jAwvUXgXL6sFT8C7j5BlCj4gWY5Saw</string>
</resources>
